<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppListFilterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_select_one_of_the_following_categories_to_filter_your_apps_accordingly"
        android:padding="10dp"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_bright"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/filterRadioChoiceGroup">

        <RadioButton
            android:id="@+id/choiceAllApps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="24sp"
            android:textStyle="italic"
            android:gravity="end"
            android:text="@string/all_apps"/>
        <RadioButton
            android:id="@+id/choiceLowRisk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="24sp"
            android:textStyle="italic"
            android:text="@string/low_risk"/>
        <RadioButton
            android:id="@+id/choiceHighRisk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="24sp"
            android:textStyle="italic"
            android:text="@string/high_risk"/>
        <RadioButton
            android:id="@+id/choiceExtremeRisk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="24sp"
            android:textStyle="italic"
            android:text="@string/extreme_risk"/>


    </RadioGroup>

<!--    <Button-->
<!--        android:id="@+id/filter"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/filter"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginTop="50dp"/>-->

</LinearLayout>